<resources>
    <string name="app_name">DemoApp</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="retry">Retry</string>
    <string name="txt_exit_app_message">Are you sure want to exit application?</string>
    <string name="txt_send">Send</string>
    <string name="txt_exit">Exit</string>
    <string name="txt_cancel">Cancel</string>
    <string name="menu_open_jobs">Open Jobs</string>
    <string name="menu_my_jobs">My Jobs</string>
    <string name="menu_profile">Profile</string>
    <string name="login">Login</string>
    <string name="hint_email">E-mail</string>
    <string name="hint_password">Password</string>
    <string name="not_nurse_user">You are not nurse user</string>
    <string name="not_active_nurse_user">Your account is not activated by admin.</string>
    <string name="txt_forgot_password">Forgot password?</string>
    <string name="please_enter_your_registered_email_id">Please enter your registered email id.</string>
    <string name="send">Send</string>
    <string name="we_will_send_verification_code_to_your_registered_email_id">We will send you verification code to your registered email id.</string>
    <string name="enter_empty_email">Please enter email</string>
    <string name="email_id_validation_message">Please enter valid email address</string>
    <string name="invalid_username_or_password">Invalid Username or Password</string>
    <string name="change_password">Change Password</string>
    <string name="hint_old_password">Old Password</string>
    <string name="hint_new_password">New Password</string>
    <string name="hint_confirm_password">Confirm Password</string>
    <string name="enter_old_password_message">Please enter old password</string>
    <string name="enter_new_password_message">Please enter new password</string>
    <string name="enter_confirm_password">Please enter confirm password</string>
    <string name="change_password_code_msg">Enter old password and new password to \ncomplete the action</string>
    <string name="password_validation_message">password must contain at least one number (0–9), one lowercase letter (a-z), one uppercase letter (A-Z)! and must not contain white space!</string>
    <string name="invalid_password_message">Password length should be minimum 8 characters</string>
    <string name="password_do_not_match">Passwords do not match</string>
    <string name="profile_information">Profile Information</string>
    <string name="employment_profile">Employment Profile</string>
    <string name="real_golf_real_money">Real Golf, Real Money</string>
    <string name="desp_1">Unique fantasy golf competitions with real cash payouts!</string>
    <string name="be_a_crowd_fund_captain">Be a Crowd Fund Captain</string>
    <string name="desp_2">Set up syndicate leagues and terms, place bets on behalf of others and earn</string>
    <string name="desp_3">Your achievements can gain you exclusive access to real golf tournaments and coaches.</string>
    <string name="access_major_golf_event">Access Major Golf Event</string>
    <string name="i_have_an_account">Already have an account?</string>
    <string name="hint_user_name">User Name</string>
    <string name="hint_email_signup">Email</string>
    <string name="hint_dob">Date Of Birth</string>
    <string name="i_accept">I Accept</string>
    <string name="terms_nd_condition"><![CDATA[Terms & Conditions]]></string>
    <string name="enter_password_message">Please enter password</string>
    <string name="enter_dob">Please enter birthday</string>
    <string name="please_accept_terms_and_condition"><![CDATA[Please accept terms & conditions]]></string>
    <string name="no_internet_found">Looks like you are not connected to internet</string>
    <string name="failed_response_title">Oops..Something went wrong</string>
    <string name="help_nd_support"><![CDATA[Help & Support]]></string>
    <string name="how_to_play">About Games/How to Play</string>
    <string name="about_us">About Us</string>
    <string name="privacy_policy">Privacy Policy</string>
    <string name="legal">Responsible Gambling</string>
    <string name="sign_out">Signout</string>
    <string name="txt_log_out_alert_message">Are you sure you want to logout?</string>
    <string name="enter_otp">Enter OTP</string>
    <string name="internal_server_error">Internal server error</string>
    <string name="forgot_password">Forgot password</string>
    <string name="faqs">FAQs</string>
    <string name="hint_message">Message</string>
    <string name="submit">Submit</string>
    <string name="enter_message">Please enter message</string>
    <string name="hint_first_name">First Name</string>
    <string name="hint_phone_number">Phone Number</string>
    <string name="done">Done</string>
    <string name="enter_user_name">Please enter user name</string>
    <string name="enter_phone_number">Please enter phone number</string>
    <string name="enter_last_name">Please enter last name</string>
    <string name="enter_first_name">Please enter first name</string>
    <string name="enter_valid_ssn">Please enter last 4 digits of your SSN</string>
    <string name="skip">Skip</string>
    <string name="save">Save</string>
    <string name="ok">OK</string>
    <string name="select_any_option">Select any option</string>
    <string name="allow">Allow</string>
    <string name="permission_step_text">
        <![CDATA[To provide the permission Go to Application info -> permission -> allow all permission]]></string>
    <string name="permission_title">We Required the below Permission</string>
    <string name="location_permission_title">We require to know your location</string>
    <string name="location_permission_message">As we would like to notify when you enter in geo-fence of facility</string>
    <string name="storage__title">We require access to device storage</string>
    <string name="storage_permission_message">To help you view your documents, we need the permission to store those to the device storage</string>
    <string name="account">Account</string>
    <string name="signed_in_as">Signed in as: %s</string>
    <string name="notification_preferences">Notification Preferences</string>
    <string name="turn_notifications_on_off">Turn notification on/off</string>
    <string name="job_preferences">Job Preferences</string>
    <string name="set_your_job_preferences">Set your job preferences</string>
    <string name="total_earned">Total Earned</string>
    <string name="total_jobs">Total Jobs</string>
    <string name="edit">Edit</string>
    <string name="alternative_no">Alternative Phone</string>
    <string name="street_address">Street Address</string>
    <string name="profile_description">Profile Description</string>
    <string name="year_of_experience">Year of Experience</string>
    <string name="level_of_experience">Level of Experience</string>
    <string name="eduction">Education</string>
    <string name="expiry_date">Expiry Date:</string>
    <string name="contact_info">Contact Info</string>
    <string name="profile_info">Profile Info</string>
    <string name="hourly_rate">Hourly Rate:</string>
    <string name="accept">Accept Job</string>
    <string name="facility">Facility:</string>
    <string name="start_time">Start Time</string>
    <string name="end_time">End Time</string>
    <string name="filter">filter</string>
    <string name="search">Search job by Id Or position</string>
    <string name="fetching_data">Fetching data</string>
    <string name="no_data_found">No data found</string>
    <string name="no_job_found">No jobs found</string>
    <string name="error_message">Something went wrong. Please try again</string>
    <string name="accepted">Accepted</string>
    <string name="completed">Completed</string>
    <string name="cancelled">Cancelled</string>
    <string name="start_shift">Start Shift</string>
    <string name="cancel_job">Cancel Job</string>
    <string name="pending_info">Info Pending</string>
    <string name="approval_pending">Approval Pending</string>
    <string name="cancelled_job">Cancelled Jobs</string>
    <string name="job_reminders">Job Reminders</string>
    <string name="new_jobs_available">New Jobs Available</string>
    <string name="turn_notifications_on_off_for_cancelled_job">Turn on/off notifications for cancelled jobs</string>
    <string name="turn_notifications_on_off_for_job_reminders">Turn on/off notifications for job reminders</string>
    <string name="turn_notifications_on_off_for_new_job_available">Turn on/off notifications for new jobs available</string>
    <string name="location">Location</string>
    <string name="less_than_km">Less than %d Mile</string>
    <string name="normal_rate">Normal Rate:</string>
    <string name="price">$%s/</string>
    <string name="per_hour">Hour</string>
    <string name="boost_percent">%s%%</string>
    <string name="boost_by">Boosted By:</string>
    <string name="txt_accept_msg">Are you sure want to accept job?</string>
    <string name="edit_profile">Edit Profile</string>
    <string name="no">No</string>
    <string name="end_shift">End Shift</string>
    <string name="job_detail">Job Details</string>
    <string name="facility_detail">Facility Detail</string>
    <string name="hint_last_name">Last Name</string>
    <string name="hint_description">Description</string>
    <string name="hint_experience">Year Of Experience</string>
    <string name="hint_level_of_experience">Level Of Experience</string>
    <string name="hint_address">Address</string>
    <string name="hint_Speciality">Speciality</string>
    <string name="member_since">Member Since:</string>
    <string name="primary_contact">Primary Contact</string>
    <string name="secondary_contact">Secondary Contact</string>
    <string name="bank_account_and_card">Bank Accounts</string>
    <string name="enter_year_of_experience">Please enter year of experience</string>
    <string name="enter_your_address">Please enter your address</string>
    <string name="download_manager_disabled">DownloadManager is disabled. Please enable it.</string>
    <string name="please_install_pdf_reader_app_to_view_documents">"Please install pdf file reader app to view your documents "</string>
    <string name="custom_date">Custom Date</string>
    <string name="start_date">Start Date</string>
    <string name="end_date">End Date</string>
    <string name="select_start_date">Select start date</string>
    <string name="select_end_date">Select end date</string>
    <string name="select_start_date_less_than_end_date">Select start date less than and not equal to end date</string>
    <string name="select_end_date_less_than_start_date">Select end date greater than and not equal to start date</string>
    <string name="all">All</string>
    <string name="today">Today</string>
    <string name="tomorrow">Tomorrow</string>
    <string name="this_week">This Week</string>
    <string name="this_month">This Month</string>
    <string name="custom">Custom</string>
    <string name="please_provide_cancel_job_reason">Please provide cancel job reason.</string>
    <string name="reject">Reject</string>
    <string name="hint_reason">Reason</string>
    <string name="please_enter_reason">Please enter reason for cancel job</string>
    <string name="yes">Yes</string>
    <string name="txt_complete_msg">Are you sure you want to end your shift and mark the job as complete?</string>
    <string name="contact_us">Contact Us</string>
    <string name="demo_login">Demo Login</string>
    <string name="go">Go</string>
    <string name="time2">Time2</string>
    <string name="time1">time1</string>
</resources>