<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/tvDialogTitle"
                style="@style/DialogTitleStyle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/colorPrimary"
                android:fontFamily="@font/regular"
                android:gravity="center"
                android:minHeight="@dimen/largestPadding"
                android:text="@string/custom_date" />

            <androidx.appcompat.widget.AppCompatImageView
                android:id="@+id/ivClose"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="end|center_vertical"
                android:layout_marginEnd="@dimen/mediumPadding"
                android:background="@drawable/ic_close" />
        </FrameLayout>

        <LinearLayout
            android:id="@+id/llOptions"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/largePadding"
            android:layout_marginEnd="@dimen/largePadding"
            android:orientation="vertical"
            android:paddingTop="@dimen/mediumPadding"
            android:paddingBottom="@dimen/mediumPadding">

            <com.google.android.material.textfield.TextInputLayout
                style="@style/tvInputLayout"
                android:hint="@string/start_date">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/edtStartDate"
                    style="@style/tvInputEditText"
                    android:drawableEnd="@drawable/ic_date"
                    android:focusable="false"
                    android:inputType="none" />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                style="@style/tvInputLayout"
                android:hint="@string/end_date">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/edtEndDate"
                    style="@style/tvInputEditText"
                    android:drawableEnd="@drawable/ic_date"
                    android:focusable="false"
                    android:inputType="none" />

            </com.google.android.material.textfield.TextInputLayout>

            <androidx.cardview.widget.CardView
                android:layout_width="wrap_content"
                android:layout_height="@dimen/xlargerPadding"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="@dimen/normalSize"
                android:padding="1dp"
                android:layout_marginBottom="@dimen/largePadding"
                app:cardBackgroundColor="@color/color_yellow"
                app:cardCornerRadius="@dimen/normalSize">

                <androidx.appcompat.widget.AppCompatTextView
                    android:id="@+id/btnDone"
                    style="@style/tvSemiBold"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_gravity="center"
                    android:gravity="center"
                    android:paddingStart="@dimen/largerPadding"
                    android:paddingTop="@dimen/smallestPadding"
                    android:paddingEnd="@dimen/largerPadding"
                    android:paddingBottom="@dimen/smallestPadding"
                    android:text="@string/done"
                    android:textColor="@color/color_white" />

            </androidx.cardview.widget.CardView>

        </LinearLayout>


    </LinearLayout>
</androidx.core.widget.NestedScrollView>