<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/color_bg"
    android:fillViewport="true">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginStart="@dimen/largePadding"
        android:layout_marginEnd="@dimen/largePadding">

        <View
            android:id="@+id/view"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            app:layout_constraintTop_toTopOf="parent" />


        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/tvText1"
            style="@style/tvToolbarTitle"
            android:text="@string/login"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toBottomOf="@id/view" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="horizontal"
            app:layout_constraintBottom_toTopOf="@id/llMain"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tvText1">

            <androidx.appcompat.widget.AppCompatImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@mipmap/ic_launcher" />

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/tinyPadding"
                android:orientation="vertical">

                <androidx.appcompat.widget.AppCompatTextView
                    style="@style/tvRegular"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/demo_login"
                    android:textAllCaps="true"
                    android:textColor="@color/color_yellow"
                    android:textSize="@dimen/medium1Size" />

                <androidx.appcompat.widget.AppCompatTextView
                    style="@style/tvRegular"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/demo_login"
                    android:textAllCaps="true"
                    android:textSize="@dimen/smallSize" />
            </LinearLayout>

        </LinearLayout>


        <LinearLayout
            android:id="@+id/llMain"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:layout_marginTop="@dimen/xxxlargePadding"
            android:focusable="true"
            android:focusableInTouchMode="true"
            android:orientation="vertical"
            app:layout_constraintBottom_toTopOf="@id/btnLogin"
            app:layout_constraintTop_toBottomOf="@id/tvText1">

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/tIEmail"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_4sdp"
                android:hint="@string/hint_email"
                android:textColorHint="@color/light_gray"
                app:boxStrokeColor="@color/light_gray"
                app:boxStrokeWidth="@dimen/_1sdp"
                app:hintTextAppearance="@style/textHintLabel">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/edtEmail"
                    style="@style/tvInputEditText"
                    android:inputType="textEmailAddress" />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/tIPassword"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_4sdp"
                android:hint="@string/hint_password"
                android:textColorHint="@color/light_gray"
                app:boxStrokeColor="@color/light_gray"
                app:boxStrokeWidth="@dimen/_1sdp"
                app:hintTextAppearance="@style/textHintLabel"
                app:passwordToggleEnabled="true">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/edtPassword"
                    style="@style/tvInputEditText"
                    android:inputType="text" />

            </com.google.android.material.textfield.TextInputLayout>

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/tvForgotPassword"
                style="@style/tvRegular"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="end"
                android:layout_marginTop="@dimen/smallPadding"
                android:text="@string/txt_forgot_password"
                android:textSize="@dimen/mediumSize" />

        </LinearLayout>

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btnLogin"
            style="@style/btnStyle"
            android:layout_below="@id/llMain"
            android:layout_marginBottom="@dimen/extraLargestPadding"
            android:text="@string/login"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.core.widget.NestedScrollView>